soft delete service and controller
